--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "balloonis",
+  "name": "balloonies",
+  "type": "module",
   "version": "1.0.0",
-  "description": "Balloons Shop Website",
+  "description": "balloonies web app",
   "main": "index.js",
   "scripts": {
+    "make-model": "npx sequelize-cli model:generate --name User --attributes firstName:string",
+    "migrate": "npx sequelize-cli db:migrate",
+    "undo-migrate": "npx sequelize-cli db:migrate:undo",
+    "make-seed": "npx sequelize-cli seed:generate --name demo-product",
+    "run-seed": "npx sequelize-cli db:seed:all",
+    "clear-seed": "npx sequelize-cli db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon bin/www.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "github.com/itayankri/balloonis"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "multer": "^1.4.3",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "concurrently": "^6.2.1",
+    "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0"
   }
 }
