--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "balloonies",
-  "type": "module",
   "version": "1.0.0",
   "description": "balloonies web app",
   "main": "index.js",
   "scripts": {
-    "make-model": "npx sequelize-cli model:generate --name User --attributes firstName:string",
-    "migrate": "npx sequelize-cli db:migrate",
-    "undo-migrate": "npx sequelize-cli db:migrate:undo",
-    "make-seed": "npx sequelize-cli seed:generate --name demo-product",
-    "run-seed": "npx sequelize-cli db:seed:all",
+    "make-model": "npx sequelize-cli model:generate --name User --attributes user_name:string,password:string",
+    "migrate": "npx sequelize-cli db:migrate --debug",
+    "undo-migrate": "npx sequelize-cli db:migrate:undo:all",
+    "make-seed": "npx sequelize-cli seed:generate --name demo-types",
+    "run-seed": "npx sequelize-cli db:seed:all --debug",
     "clear-seed": "npx sequelize-cli db:seed:undo:all",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server",
@@ -20,14 +19,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^6.6.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
