Created email services using emailjs, frontend components style fixes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ node_modules
 images
 node_modules/
 /config/config.json
+/backend/config/config.json
+/frontend/.env.development
+/frontend/.env.production
 .sequelizerc
 /.pnp
 .pnp.js
